2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/hfs.c (grub_hfs_read_file): Avoid divmod64 since the
	maximum size is 4G - 1 on hfs

2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Avoid costly 64-bit division in grub_get_time_ms on most platforms.

2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fshelp.c (grub_fshelp_log2blksize): Remove now unused
	function.

2013-03-07  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/fs/iso9660.c (add_part): Remove always_inline attribute
	causing gcc error with gcc 4.7.1.

2013-03-07  Nickolai Zeldovich <nickolai@csail.mit.edu>

	* grub-core/commands/acpi.c (grub_acpi_create_ebda): Don't
	dereference null pointer. While the code is technically correct, gcc
	may eliminate a null check if pointer is already dereferenced.

2013-03-07  Nickolai Zeldovich <nickolai@csail.mit.edu>

	* grub-core/normal/crypto.c (read_crypto_list): Fix incorrect
	OOM check.
	* grub-core/normal/term.c (read_terminal_list): Likewise.

2013-03-07  Vladimir Serbinenko  <phcoder@gmail.com>

	Lift up core size limits on some platforms. Fix potential memory
	corruption with big core on small memory systems. Document remaining
	limits.

2013-03-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/terminfo.c (grub_terminfo_cls): Issue an explicit
	gotoxy to 0,0.

2013-03-03  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove all trampoline support. Add -Wtrampolines when
	present. Remove symbols used for trampolines to make
	link fail if trampolines are present.

2013-03-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/execute.c (grub_script_arglist_to_argv): Move
	append out of its parent.

2013-03-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/regexp.c (set_matches): Move setvar out of its
	parent.

2013-03-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/env.c, include/grub/env.h: Change iterator through